# lesson_point_ws

./: cmd.txt
shflies/: ground_test.sh  pub_swarm_triger.sh  pub_triger.sh  realflight_drone6.sh  takeoff.sh  takeoff_airs.sh
src/px4ctrl/: CMakeLists.txt
src/px4ctrl/config/: ctrl_param_fpv.yaml  waypoints.yaml
src/px4ctrl/launch/: cmd.launch  drone6.launch  drone6_position.launch  drone_001_usrp.launch  run_ctrl.launch
src/px4ctrl/network_io/: network_io.py
src/px4ctrl/scripts/: Func.py  Last_pos.csv  M1.csv  Point.py  Singal.py  Swarm.py  TSGZ.csv  UAVtrajectory-5.csv  UAVtrajectory.csv  caiji.csv  caiji1.csv  data5.csv  sync.py  test.py  wolfros.py
src/px4ctrl/scripts/Singal_Pos/: E.csv  E1.csv  E2.csv  x.csv  x1.csv  x2.csv  y.csv  y1.csv  y2.csv
src/px4ctrl/scripts/hangji/: HJ.csv  res1.csv  res2.csv  res3.csv
src/px4ctrl/src/: PX4CtrlFSM.cpp  PX4CtrlFSM.h  cmd_pub.cpp  cmd_pub_airs.cpp  cmd_pub_landing.cpp  cmd_pub_test.cpp  code_pose_cal  controller.cpp  controller.h  input.cpp  input.h  odom_pub_test.cpp  pose_modifier.cpp  px4ctrl_node.cpp  pynode_example
src/px4ctrl/thrust_calibrate_scrips/: thrust_calibrate.py
src/quadrotor_msgs/: CMakeLists.txt  package.xml
src/quadrotor_msgs/msg/: Pose_Collect.msg  Sgn_Pose.msg  Uwb_Locate.msg  Uwb_Single_Stamp.msg  Uwb_Stamp.msg  sgn_stamp.msg
src/uav_utils/include/uav_utils/: converters.h
